--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,11 +17,15 @@ target 'InstagramProfileUI' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper-Folly' => '2.3.0' }) # update this part
+  use_flipper!()
+
   post_install do |installer|
-    flipper_post_install(installer)
-    installer.pods_project.build_configurations.each do |config| config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] =  "arm64"
-    end
+    react_native_post_install(installer)
+      installer.pods_project.targets.each do |target|
+          target.build_configurations.each do |config|
+            config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
+          end
+      end
   end
 end
 
